--- a/1Curso-frontendDeveloper/31-32capitulo-login_registro/registro/style.css
+++ b/1Curso-frontendDeveloper/31-32capitulo-login_registro/registro/style.css
@@ -2,4 +2,139 @@
     margin:0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Muli', sans-serif;
 }
+
+.header{
+    align-items: center;
+    background-color: #21c08b;
+    color: white;
+    display: flex;
+    height: 100px;
+    justify-content: space-between;
+    top: 0px;
+    width: 100%;
+}
+
+.header__img{
+    width: 200px;
+    margin-left: 30px;
+}
+
+.section{
+   
+        background: linear-gradient(#21c08b, #fd7e57);
+        display: flex;
+        
+        flex-direction: row-reverse;
+        justify-content: center;
+        padding: 0px 30px;
+        min-height: 100%;
+        width:100%;
+    
+    
+}
+.register{
+   
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    padding: 0px 30px;
+    min-height: 100%;
+    width: 50%;
+}
+
+.register__container{
+    background-color: rgba(255, 255, 255, 0.1);
+    border: 2px solid white;
+    border-radius: 40px;
+    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+    color: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    min-height: 575px;
+    padding: 60px 68px 40px;
+    width: 375px;
+    order: 1;
+}
+.register__img{
+    display: flex;
+    flex-direction: row;
+    align-items:flex-start;
+    justify-content:center;
+    min-height: 575px;
+    padding: 60px 68px 40px;
+    width: 375px;
+    order:0;
+}
+    
+.register__container--form {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .register__container a {
+    color: white;
+    font-size: 16px;
+    text-align: center;
+    text-decoration: none;
+  }
+
+  .register__container a:hover {
+    text-decoration: underline;
+  }
+  .input {
+    background-color: transparent;
+    border-bottom: 2px solid white;
+    border-left: 0px;
+    border-right: 0px;
+    border-top: 0px;
+    color: white;
+    font-family: 'Muli', sans-serif;
+    font-size: 14px;
+    height: 50px;
+    margin-bottom: 20px;
+    outline: none;
+    padding: 0px 20px;
+    
+  }
+  
+  ::placeholder {
+    color: white;
+  }
+
+  .button {
+    background-color: rgba(255, 255, 255, 0.3);
+    border: none;
+    border-radius: 25px;
+    color: white;
+    cursor: pointer;
+    font-size: 16px;
+    font-weight: bold;
+    font-family: 'Muli', sans-serif;
+    height: 50px;
+    letter-spacing: 1px;
+    margin: 10px 0px;
+  }
+
+  .footer {
+    align-items: center;
+    background-color: #fd7e57
+    ;
+    display: flex;
+    height: 100px;
+    width: 100%;
+  }
+  
+  .footer a {
+    color: white;
+    cursor: pointer;
+    font-size: 14px;
+    padding-left: 30px;
+    text-decoration: none;
+  }
+  
+  .footer a:hover {
+    text-decoration: underline;
+  }
